# top-restaurant-api-rust

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20231223105619_users.up.sql  20231223230137_restaurants.down.sql  20231223230137_restaurants.up.sql  20240127203317_restaurant_menus.down.sql  20240127203317_restaurant_menus.up.sql  20240127203406_restaurant_menu_items.down.sql  20240127203406_restaurant_menu_items.up.sql
src/: config.rs  main.rs
src/common/: auth_middleware.rs  jwt.rs  mod.rs  role_middleware.rs
src/modules/: mod.rs
src/modules/auth/: auth_controller.rs  auth_dto.rs  mod.rs
src/modules/files/: files_controller.rs  files_dto.rs  mod.rs
src/modules/restaurant_menu_items/: mod.rs  restaurant_menu_items_controller.rs  restaurant_menu_items_dto.rs
src/modules/restaurant_menus/: mod.rs  restaurant_menus_controller.rs  restaurant_menus_dto.rs
src/modules/restaurants/: mod.rs  restaurants_controller.rs  restaurants_dto.rs
src/modules/shared/: mod.rs  shared_dto.rs
src/modules/users/: mod.rs  users_controller.rs  users_dto.rs
